<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_fragment"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="10dp"
            android:layout_height="32dp"
            android:background="@color/orang_red_1" />

        <TextView
            android:id="@+id/bt_choose_priority_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/priority1"
            android:textSize="20dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="10dp"
            android:layout_height="32dp"
            android:background="@color/sun_yellow_2" />

        <TextView
            android:id="@+id/bt_choose_priority_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/priority2"
            android:textSize="20dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="10dp"
            android:layout_height="32dp"
            android:background="@color/viridian_3" />

        <TextView
            android:id="@+id/bt_choose_priority_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/priority3"
            android:textSize="20dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="10dp"
            android:layout_height="32dp"
            android:background="@color/clear_blue_4" />

        <TextView
            android:id="@+id/bt_choose_priority_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/priority4"
            android:textSize="20dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="right"
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:text="@string/cancel"
            android:textSize="20dp" />

    </FrameLayout>
</LinearLayout>
